--- a/Comics page.html
+++ b/Comics page.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,10 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Titillium+Web|Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     
     <div class="container">
+        <div class="row">
+                <h1 class="mx-auto title">Comics Page</h1>
+        </div>
         <div class="row">
           <div class="col-md-4">
             <img class="comic_img mx-auto d-block" src="comic_img.jpg">
